bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:1: error: type mismatch;
 found   : Int(20)
 required: Boolean
def parotTrouble(talking:Boolean, hour:Int):Boolean = {if (7<hour<20) {return true}
                                                                  ^