bat.bool1.parottrouble.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {if (7<hour<20) {return true}
                                                       else {return false}
  }